--- a/app/views/pages/course_one.html.erb
+++ b/app/views/pages/course_one.html.erb
@@ -8,7 +8,7 @@
       <br>
       <br>
     </div>
-    <button type="button" class="btn btn-primary" onclick="www.teachable.com/">Buy Now!</button>
+    <a href="https://teachable.com/" target="_blank" type="button" class="btn btn-primary">Buy Now!</a>
     <div class="course-right">
       <i class="fa fa-lightbulb-o" aria-hidden="true">&nbsp All Levels</i><br>
       <br>
